--- a/src/main/resources/templates/fragments/loginform.html
+++ b/src/main/resources/templates/fragments/loginform.html
@@ -24,24 +24,15 @@
                 <span th:utext="#{screen.welcome.instructions}"></span>
             </p>
 
-            <div id="orcidlogin" th:if="${delegatedAuthenticationProviderConfigurations}">
-                <section class="delegation-row"
-                    th:each="entry: ${delegatedAuthenticationProviderConfigurations}"
-                    th:if="${entry.type} == 'orcid'">
-                    <a class="delegation-button" th:href="@{${entry.redirectUrl}}">
-                        <img class="delegation-button-logo" src="/images/orcid-logo.png">
-                        <span class="delegation-button-label" th:utext="#{screen.delegation.button.orcid}"></span>
-                    </a>
-                </section>
-            </div>
-
-            <div id="instnlogin">
-                <section class="delegation-row">
-                    <a class="delegation-button" th:href="@{/login(campaign=institution, institutionId=${institutionId ?: ''}, service=${service?.originalUrl ?: ''})}">
-                        <img class="delegation-button-logo" src="/images/institution-logo.png">
-                        <span class="delegation-button-label" th:utext="#{screen.delegation.button.institution}"></span>
-                    </a>
-                </section>
+            <div class="form-button-inline" id="orcidlogin" th:if="${osfCasLoginContext.orcidLoginUrl}">
+                <a class="mdc-button mdc-button--raised button-osf-grey" th:href="@{${osfCasLoginContext.orcidLoginUrl}}">
+                    <img class="delegation-button-logo" src="/images/orcid-logo.png">
+                    <span class="delegation-button-label" th:utext="#{screen.delegation.button.orcid}"></span>
+                </a>
+                <a class="mdc-button mdc-button--raised button-osf-grey" th:href="@{/login(campaign=institution, institutionId=${institutionId ?: ''}, service=${service?.originalUrl ?: ''})}">
+                    <img class="delegation-button-logo" src="/images/institution-logo.png">
+                    <span class="delegation-button-label" th:utext="#{screen.delegation.button.institution}"></span>
+                </a>
             </div>
 
             <div>
@@ -139,9 +130,7 @@
                         </p>
                     </section>
 
-                    <div th:replace="fragments/submitbutton :: submitButton (buttonDisabled=false, buttonCustomization='button-osf-green', messageKey='screen.welcome.button.login')" />
-
-                </form>
+                    <div th:replace="fragments/submitbutton :: submitButton (buttonDisabled=false, buttonCustomization='button-osf-blue', messageKey='screen.welcome.button.login')" />
 
                     <section class="cas-field cas-field-primary cas-field-col-2">
                         <span class="cas-field-float-left" th:if="${rememberMeAuthenticationEnabled}">
