Terms of service consent check page rework
* Always use w-lg-30 for consistency. The condition used to decide
  whether to use  w-lg-30 or w-lg-50 only applies to the default
  twin-column case. newCAS has switched to a more elegant single-
  column UI that is consistent with both oldCAS and OSF.
* Use HTML <section> tag to replace <div> as much as possible.
* Fixed the style for card-messaage and re-phrased the messages.
* Normalized and improved variable names in messages.properties.
* Use OSF blue for the agree / continue button
* Applied improvements back to both the default login page and the two-
  factor authentication page.

--- a/src/main/resources/static/css/cas.css
+++ b/src/main/resources/static/css/cas.css
@@ -883,6 +883,10 @@ body {
     margin-bottom: -0.5rem;
 }
 
+.login-section .card-message {
+    padding: 1rem 0;
+}
+
 .login-error-list .banner {
     border: none;
     position: relative;
