--- a/src/main/resources/templates/fragments/loginform.html
+++ b/src/main/resources/templates/fragments/loginform.html
@@ -12,19 +12,21 @@
 
 <body>
     <main role="main" class="container mt-3 mb-3">
+
         <!-- Login form template begins here -->
         <div th:fragment="loginform" class="d-flex flex-column justify-content-between m-auto">
-            <div th:if="${delegatedAuthenticationProviderPrimary == null}">
+
+            <section th:if="${delegatedAuthenticationProviderPrimary == null}">
                 <div class="service-ui" th:replace="fragments/serviceui :: serviceUI">
                     <a href="fragments/serviceui.html"></a>
                 </div>
-            </div>
+            </section>
 
-            <p class="text-without-mdi text-center text-bold text-large margin-large-vertical">
+            <section class="text-without-mdi text-center text-bold text-large margin-large-vertical">
                 <span th:utext="#{screen.welcome.instructions}"></span>
-            </p>
+            </section>
 
-            <div class="form-button-inline" id="orcidlogin" th:if="${osfCasLoginContext.orcidLoginUrl}">
+            <section class="form-button-inline" id="orcidlogin" th:if="${osfCasLoginContext.orcidLoginUrl}">
                 <a class="mdc-button mdc-button--raised button-osf-grey" th:href="@{${osfCasLoginContext.orcidLoginUrl}}">
                     <img class="delegation-button-logo" src="/images/orcid-logo.png">
                     <span class="delegation-button-label" th:utext="#{screen.welcome.button.orcidlogin}"></span>
@@ -33,13 +35,14 @@
                     <img class="delegation-button-logo" src="/images/institution-logo.png">
                     <span class="delegation-button-label" th:utext="#{screen.welcome.button.institutionlogin}"></span>
                 </a>
-            </div>
+            </section>
 
-            <div>
+            <section>
                 <hr class="hr-text" data-content="OR" />
-            </div>
+            </section>
 
             <div class="form-wrapper">
+
                 <form method="post" id="fm1" th:object="${credential}" action="login">
 
                     <section class="cas-field my-2=3">
@@ -107,13 +110,13 @@
                         </button>
                     </section>
 
-                    <div id="loginformerrorlist" class="login-error-list" th:if="${#fields.hasErrors('*')}">
+                    <section id="loginformerrorlist" class="login-error-list" th:if="${#fields.hasErrors('*')}">
                         <div th:each="err : ${#fields.errors('*')}" th:if="${not #strings.isEmpty(err)}">
                             <div class="banner banner-danger banner-dismissible" >
                                 <p class="login-error-inline" th:utext="${err + ' '}"></p>
                             </div>
                         </div>
-                    </div>
+                    </section>
 
                     <section class="cas-field">
 
@@ -130,7 +133,9 @@
                         </p>
                     </section>
 
-                    <div th:replace="fragments/submitbutton :: submitButton (buttonDisabled=false, buttonCustomization='button-osf-blue', messageKey='screen.welcome.button.login')" />
+                    <section>
+                        <div th:replace="fragments/submitbutton :: submitButton (buttonDisabled=false, buttonCustomization='button-osf-blue', messageKey='screen.welcome.button.login')" />
+                    </section>
 
                     <section class="cas-field cas-field-primary cas-field-col-2">
                         <span class="cas-field-float-left" th:if="${rememberMeAuthenticationEnabled}">
