--- a/src/main/resources/templates/fragments/totploginform.html
+++ b/src/main/resources/templates/fragments/totploginform.html
@@ -12,20 +12,22 @@
 
 <body>
     <main role="main" class="container mt-3 mb-3">
+
         <!-- Two-factor authentication login form template begins here -->
         <div th:fragment="totploginform" class="d-flex flex-column justify-content-between m-auto">
 
-            <div>
+            <section>
                 <div class="service-ui" th:replace="fragments/osfbannerui :: osfBannerUI">
                     <a href="fragments/osfbannerui.html"></a>
                 </div>
-            </div>
+            </section>
 
-            <p class="text-without-mdi text-center text-bold text-large margin-large-vertical">
+            <section class="text-without-mdi text-center text-bold text-large margin-large-vertical">
                 <span th:utext="#{screen.twofactor.instructions.top}"></span>
-            </p>
+            </section>
 
             <div class="form-wrapper">
+
                 <form method="post" id="fm1" th:object="${credential}" action="login">
 
                     <section class="cas-field my-2=3">
@@ -88,13 +90,13 @@
                         </button>
                     </section>
 
-                    <div id="loginformerrorlist" class="login-error-list" th:if="${#fields.hasErrors('*')}">
+                    <section id="loginformerrorlist" class="login-error-list" th:if="${#fields.hasErrors('*')}">
                         <div th:each="err : ${#fields.errors('*')}" th:if="${not #strings.isEmpty(err)}">
                             <div class="banner banner-danger banner-dismissible" >
                                 <p class="login-error-inline" th:utext="${err + ' '}"></p>
                             </div>
                         </div>
-                    </div>
+                    </section>
 
                     <section class="cas-field">
                         <input type="hidden" name="execution" th:value="${flowExecutionKey}"/>
@@ -109,7 +111,9 @@
                         </p>
                     </section>
 
-                    <div th:replace="fragments/submitbutton :: submitButton (buttonDisabled=false, buttonCustomization='button-osf-blue', messageKey='screen.twofactor.button.verify')" />
+                    <section>
+                        <div th:replace="fragments/submitbutton :: submitButton (buttonDisabled=false, buttonCustomization='button-osf-blue', messageKey='screen.twofactor.button.verify')" />
+                    </section>
 
                 </form>
 
