--- a/src/main/resources/static/css/cas.css
+++ b/src/main/resources/static/css/cas.css
@@ -756,26 +756,6 @@ body {
     max-width: 48rem;
 }
 
-.login-instn-card .card-message {
-    padding: 0.25rem 0;
-}
-
-.login-instn-card .instn-select select {
-    width: 100%;
-    height: 3rem;
-    font-size: 1.25rem;
-    padding: 0 1rem;
-    margin: 0.5rem 0;
-}
-
-.login-instn-card .instn-consent {
-    padding: 1rem 0;
-}
-
-.login-instn-card .instn-consent input {
-    margin-right: 0.5rem;
-}
-
 .mdc-top-app-bar__row,
 .mdc-top-app-bar__row .mdc-top-app-bar__section {
     min-width: fit-content;
@@ -803,7 +783,8 @@ body {
     color: #F7F7F7;
 }
 
-.mdc-top-app-bar__row .hidden-narrow {
+.mdc-top-app-bar__row .hidden-narrow,
+.service-ui .osf-shield-with-name .hidden-narrow {
     font-weight: normal;
 }
 
@@ -827,6 +808,20 @@ body {
 
 .service-ui .service-ui-info {
     display: none;
+}
+
+.service-ui .osf-shield-with-name {
+    margin: 0 auto;
+    padding-bottom: 1rem;
+}
+
+.osf-shield-with-name .service-ui-logo {
+    padding-right: 0.5rem;
+}
+
+.osf-shield-with-name .service-ui-name {
+    font-size: 2.25rem;
+    font-weight: bold;
 }
 
 .text-with-mdi,
@@ -885,6 +880,13 @@ body {
 
 .login-section .card-message {
     padding: 1rem 0;
+}
+
+.login-section .instn-select select {
+    width: 100%;
+    height: 56px;
+    font-size: 1.25rem;
+    margin: 0.5rem 0;
 }
 
 .login-error-list .banner {
@@ -1049,10 +1051,6 @@ body {
 
 @media all and (min-width: 699.99px) {
 
-    .mdc-top-app-bar__row .hidden-narrow {
-        display: inline;
-    }
-
     .w-card-narrow {
         width: 50%;
     }
@@ -1075,7 +1073,8 @@ body {
 
 @media all and (max-width: 699.99px) {
 
-    .mdc-top-app-bar__row .hidden-narrow {
+    .mdc-top-app-bar__row .hidden-narrow,
+    .service-ui-name .osf-shield-with-name .hidden-narrow {
         display: None;
     }
 
@@ -1088,6 +1087,14 @@ body {
 
     .service-ui .service-ui-logo {
         max-width: 280px;
+    }
+
+    .osf-shield-with-name .service-ui-logo {
+        max-height: 48px;
+    }
+
+    .osf-shield-with-name .service-ui-name {
+        font-size: 2rem;
     }
 
     .login-section .text-with-mdi {
@@ -1130,6 +1137,14 @@ body {
 
     .service-ui .service-ui-logo {
         max-width: 240px;
+    }
+
+    .osf-shield-with-name .service-ui-logo {
+        max-height: 36px;
+    }
+
+    .osf-shield-with-name .service-ui-name {
+        font-size: 1.75rem;
     }
 
     .login-section .text-with-mdi {
