--- a/src/main/resources/templates/casInstitutionLoginView.html
+++ b/src/main/resources/templates/casInstitutionLoginView.html
@@ -9,15 +9,27 @@
     <link href="../../static/css/cas.css" rel="stylesheet" th:remove="tag"/>
 </head>
 
-<body>
-    <main role="main" class="container mt-3 mb-3">
+<body class="login mdc-typography">
+        <div layout:fragment="content" class="d-flex justify-content-center">
+            <div class="d-flex justify-content-center flex-md-row flex-column mdc-card mdc-card-content w-lg-30">
+                <section class="login-section login-form">
 
-        <div layout:fragment="content" class="row">
-            <div class="banner-generic m-auto mdc-card p-4 w-card-narrow">
-                <div class="login-generic-card login-instn-card">
-                    <div th:replace="fragments/osfinstitutionbannerui :: osfInstitutionBannerUI">
-                        <a href="fragments/osfinstitutionbannerui.html"></a>
-                    </div>
+                    <section class="mb-4 service-ui text-center">
+                        <table class="osf-shield-with-name">
+                            <tbody>
+                            <tr>
+                                <td>
+                                    <img class="service-ui-logo" src="/images/osf-logo.png">
+                                </td>
+                                <td>
+                                    <span class="service-ui-name hidden-narrow">OSF </span>
+                                    <span class="service-ui-name">INSTITUTIONS</span>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </section>
+
                     <hr class="my-4" />
                     <div class="card-message">
                         <h2 th:utext="#{screen.institutionlogin.heading}"></h2>
@@ -67,7 +79,7 @@
                             </a>
                         </section>
                     </div>
-                </div>
+                </section>
             </div>
 
             <script th:inline="javascript">
